css/components/buttons.css
@-webkit-keyframes bounce { 0%, 100% { top: 0; } 30% { top: 10px; } 50% { top: 0px; } 80% { top: 10px; } }
@-moz-keyframes bounce { 0%, 100% { top: 0; } 30% { top: 10px; } 50% { top: 0px; } 80% { top: 10px; } }
@keyframes bounce { 0%, 100% { top: 0; } 30% { top: 10px; } 50% { top: 0px; } 80% { top: 10px; } }
button {
  font-family: 'Poppins', sans-serif;
}
#bouncing-button {
  margin-top: 2rem;
  margin-bottom: 2rem;
  position: relative;
  color: inherit;
  -webkit-animation: bounce 2s infinite ease-in-out; 
  -moz-animation: bounce 2s infinite ease-in-out;
  border: none;
  background-color: inherit;
  font-size: 3em;
  z-index: 10;
}

#bouncing-button:hover {
  opacity: 0.7;
  color: #333333;
  transition: 0.3s;
}

.custom-button {
  border: 1px solid lightblue;
  color: lightblue;
  background-color: transparent;
  padding: 5px 15px;
  border-radius: 15px;
  margin: 10px 0;
}

.custom-button:hover {
  background-color: lightblue;
  color: white;
  transition: 0.5s;
}

.custom-button-blue {
  color: white;
  background-color: lightblue;
  padding: 10px 20px;
  border-radius: 25px;
  margin: 10px 0;
  border: 0;
}

.bigger-icon {
  font-size: 1.5rem;
}

.pill-button {
  font-size: 10px;
  width: 90px;
  border: none;
  padding: 5px 10px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  border-radius: 16px;
  color: white;
}

#camperworldModal .pill-button {
  background-color: #47493B;
}

#localshopperModal .pill-button {
  background-color: #8993D1;
}

@media (min-width: 760px) {
  #bouncing-button { 
    margin-top: 5rem;
    margin-bottom: 5rem;
  }

  #see-more-projects {
    margin-right: 20px;
    align-self: center;
  }

  #see-more-projects-button {
    /* margin-right: 20px;
    padding: 50px; */
    border: 1px solid rgb(114, 114, 114);
    width: 200px;
    padding: 10px;
    margin-right: 15px;
    /* white-space: nowrap; */
  }

  
}

/* #back-to-top {
  position: fixed;
  right: 5%;
  bottom: 5%;
  margin: auto;
} */

.email {
  color: #33333386;
}

.close-modal {
  position: absolute;
  top: 5px;
  right: 10px;
  font-size: 3rem;
  color: #333;
  cursor: pointer;
  border: none;
  background: none;
}

.close-modal:hover {
  color: lightblue;
}

/* Theme Toggler */
.checkbox {
  opacity: 0;
  left:0;
  top:0;
  z-index: 10;
  display: none;
}

.label {
  cursor: pointer;
}

.fa-moon {
  /* color: lightblue; */
  color: rgb(170, 170, 170);
  transform: scale(1.1);
  margin: 0px 10px 0px 20px;
}

.fa-sun {
  transform: scale(1.1);
  color: #f0d435;
  margin: 0px 10px 0px 20px;
}

@media (min-width: 760px) {
  .close-modal {
    top: 10px;
    right: 30px;
    font-size: 3rem;
  }
}

